Created bank_users/asterisk (2).png, bank_users/asterisk (1).png and bank_users/asterisk.png; Edited bank_users.main_form.login_page and bank_users.main_form.basic_registration_form

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -676,6 +676,7 @@ unique_ids:
     bank_users/main_form/investnow-applyforloan/invest now.jpg: '1714367222182830070096820.575'
     admin/dashboard/accounting/mis-reports/liability on company report.png: '1718945414810313399810567.35986'
     bank_users/main_form/customer review 2.png: '1708336552923755824441573.2804'
+    bank_users/asterisk (2).png: '1720186284602461296212776.1078'
     risk-management.png: '1718191101319664692868574.8723'
     bank_users/main_form/.gitkeep: '1715930244250306915103367.4311'
     emi interest.png: '1712559954163931926473073.8877'
@@ -705,6 +706,7 @@ unique_ids:
     lender/dashboard/withdraw (2).png: '1717072968877377905474369.433'
     bank_users/personal_loan/home_renovation_loan/home loan 4.png: '1713938943738803837298821.44'
     borrower/dashboard/borrower_credit_limit.png: '1716286643090611547656559.6545'
+    bank_users/asterisk (1).png: '1720186317731709298292682.8993'
     admin/dashboard/collateral_manage/.gitkeep: '1718280525760736517742029.9607'
     bank_users/personal_loan/education_loan/EL-eligibility3.png: '1714131852200225274930182.27673'
     admin/dashboard/manage-borrowers.png: MO552AGM5LW2QRRYFB4QKLZQZO4SFJTG
@@ -929,6 +931,7 @@ unique_ids:
     admin/dashboard/manage_cms/no of employees.png: FLOTECLUWDFHSBJWEZYJ5LV7I3VX2T5R
     bank_users/personal_loan/.gitkeep: '1715929813883346807521390.8377'
     bank_users/main_form/business_loan/collateral.png: '1712294753220960879970696.0487'
+    bank_users/asterisk.png: '1720186348036539012077407.1403'
     bank_users/personal_loan/how_it_works/quick_funding.png: '171334472778416215964591.33401'
     bank_users/personal_loan/loan_repayment.png: '1712901264643778006115198.944'
     admin/dashboard/field-engineer.png: '1718355791143192345299079.71008'
