--- a/client_code/borrower/borrower_registration_forms/star_1_borrower_registration_form_3_marital/form_template.yaml
+++ b/client_code/borrower/borrower_registration_forms/star_1_borrower_registration_form_3_marital/form_template.yaml
@@ -14,6 +14,10 @@ components:
   properties: {prop: ''}
   name: navigation_bar_1
   layout_properties: {grid_position: 'KZSWAA,PNCXHD', full_width_row: true}
+- name: registration_process_1
+  properties: {}
+  type: form:borrower.borrower_registration_forms.registration_process
+  layout_properties: {grid_position: 'MZLTOH,TYUHHR'}
 - name: column_panel_3
   properties: {role: outlined-card}
   type: ColumnPanel
