--- a/client_code/borrower/borrower_registration_forms/star_1_borrower_registration_form_5_bank_1/form_template.yaml
+++ b/client_code/borrower/borrower_registration_forms/star_1_borrower_registration_form_5_bank_1/form_template.yaml
@@ -14,6 +14,10 @@ components:
   properties: {prop: ''}
   name: navigation_bar_1
   layout_properties: {grid_position: 'GJLMKG,ZNSMLH', full_width_row: true}
+- name: registration_process_1
+  properties: {}
+  type: form:borrower.borrower_registration_forms.registration_process
+  layout_properties: {grid_position: 'DUMKVV,DFRSSC'}
 - name: column_panel_1
   properties: {role: outlined-card}
   type: ColumnPanel
