--- a/client_code/bank_users/main_form/basic_registration_form/form_template.yaml
+++ b/client_code/bank_users/main_form/basic_registration_form/form_template.yaml
@@ -172,7 +172,7 @@ components:
         icon_align: left
         foreground: ''
         spacing_below: small
-        visible: false
+        visible: true
         border: ''
         italic: false
         font_size: null
@@ -182,12 +182,12 @@ components:
       type: Label
       layout_properties: {grid_position: 'RKZEYY,OQQCFW SJXXIA,MCZMMT'}
     - name: registration_img_aadhar_file_loader
-      properties: {visible: false}
+      properties: {visible: true}
       type: FileLoader
       layout_properties: {grid_position: 'RKZEYY,OQQCFW MVXDPF,IKIGNC'}
       event_bindings: {change: registration_img_aadhar_file_loader_change}
     - name: image_aadhar
-      properties: {height: '50', role: null, visible: false}
+      properties: {height: '50', role: null, visible: true}
       type: Image
       layout_properties: {grid_position: 'RKZEYY,OQQCFW MVXDPF,QISHYN'}
     - name: govt_id1_file_name
@@ -207,7 +207,7 @@ components:
         icon_align: right
         foreground: ''
         spacing_below: small
-        visible: false
+        visible: true
         border: ''
         italic: false
         font_size: null
@@ -217,12 +217,12 @@ components:
       type: Label
       layout_properties: {grid_position: 'RKZEYY,OQQCFW WHFMPM,XARIHS'}
     - name: registration_img_pan_file_loader
-      properties: {visible: false}
+      properties: {visible: true}
       type: FileLoader
       layout_properties: {grid_position: 'RKZEYY,OQQCFW DJEJGJ,UFZBSE'}
       event_bindings: {change: registration_img_pan_file_loader_change}
     - name: image_pan
-      properties: {height: '50', visible: false, role: null}
+      properties: {height: '50', visible: true, role: null}
       type: Image
       layout_properties: {grid_position: 'RKZEYY,OQQCFW DJEJGJ,LSFYWI'}
     - name: govt_id2_file_name
@@ -301,6 +301,33 @@ components:
       properties: {role: outlined, bold: false, align: left, placeholder: Enter your state, spacing_above: small, background: 'theme:On Primary', type: text, underline: false, font: '', hide_text: false, foreground: '', spacing_below: small, visible: true, border: '', italic: false, enabled: true, font_size: null, tooltip: '', text: ''}
       type: TextBox
       layout_properties: {grid_position: 'OUUODX,YYHRES XGDJRM,KZCYYG'}
+    - name: label_4_copy_1
+      properties: {role: input-prompt, bold: true, align: left, spacing_above: small, background: '', icon: '', underline: false, font: '', icon_align: left, foreground: '', spacing_below: small, visible: true, border: '', italic: false, font_size: null, tooltip: '', text: 'Choose Your Marital Status  * '}
+      type: Label
+      layout_properties: {grid_position: 'OUUODX,YYHRES KUHMGL,DARWXH'}
+    - name: marital_status_borrower_registration_dropdown
+      properties:
+        role: outlined
+        include_placeholder: true
+        bold: false
+        align: full
+        placeholder: Select One
+        spacing_above: small
+        background: theme:On Primary
+        underline: false
+        font: ''
+        foreground: ''
+        items: [Married, Not Married]
+        spacing_below: small
+        visible: true
+        border: ''
+        italic: false
+        enabled: true
+        font_size: null
+        tooltip: ''
+      type: DropDown
+      layout_properties: {grid_position: 'OUUODX,YYHRES SUMHRQ,TZYOGX'}
+      event_bindings: {}
     - name: label_3_copy_1_copy_1
       properties: {role: input-prompt, bold: true, align: left, spacing_above: small, background: '', icon: '', underline: false, font: '', icon_align: left, foreground: '', spacing_below: small, visible: true, border: '', italic: false, font_size: null, tooltip: '', text: Enter Your Street Address 2}
       type: Label
@@ -351,9 +378,9 @@ components:
       properties: {role: outlined, bold: false, align: left, placeholder: Enter your country, spacing_above: small, background: 'theme:On Primary', type: text, underline: false, font: '', hide_text: false, foreground: '', spacing_below: small, visible: true, border: '', italic: false, enabled: true, font_size: null, tooltip: '', text: ''}
       type: TextBox
       layout_properties: {grid_position: 'OUUODX,ZIEISC JGDJUR,DXHWTR'}
-- name: submit_btn
-  properties: {role: elevated-button, bold: true, align: center, spacing_above: small, background: '#012146', icon: 'fa:save', underline: false, font: '', icon_align: left, foreground: 'theme:On Primary', spacing_below: small, visible: true, border: '', italic: false, enabled: true, font_size: null, tooltip: '', text: Submit}
-  type: Button
-  layout_properties: {grid_position: 'JDOPUY,TRZNKH'}
-  event_bindings: {click: submit_btn_click}
+    - name: submit_btn
+      properties: {role: elevated-button, bold: true, align: center, spacing_above: small, background: '#012146', icon: 'fa:save', underline: false, font: '', icon_align: left, foreground: 'theme:On Primary', spacing_below: small, visible: true, border: '', italic: false, enabled: true, font_size: null, tooltip: '', text: Submit}
+      type: Button
+      layout_properties: {grid_position: 'DZGGPL,HKKFOX'}
+      event_bindings: {click: submit_btn_click}
 is_package: true
